--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header class="p-1 bg-info">
   <h1 class="text-center text-primary mx-auto"> Online Ayurveda</h1>
- 
+  <div class="col-10 text-end" *ngIf="!storageservice.loginflag">
+    <a routerLink="/login" style="cursor:pointer">Login</a>
+  </div>
 </header>
 
 <article>
@@ -8,7 +10,7 @@
     
     <a routerLink='category' class="m-2 text-white">Category </a>
     <a routerLink='medicine' class="m-2 text-white">Medicine</a>
-
+    
   </nav>
   <router-outlet></router-outlet>
 </article>
