--- a/src/app/viewmedicinebycategory/viewmedicinebycategory.component.html
+++ b/src/app/viewmedicinebycategory/viewmedicinebycategory.component.html
@@ -1,34 +1,25 @@
-<article>
-  <section class="col4 mx-auto m-2">
+<article style="width:100%">
+  <section class="col-3 mx-auto m-2">
     Category<select [(ngModel)]="categoryName" (change)="viewbycategory()">
-     <!-- <option value="Herbal Extracts">Herbal Extracts</option>
-      <option value="Menthol Essentials">Menthol Essentials</option>
-      <option value="Natural Herbs ">Natural Herbs</option> -->
-     <option *ngFor="let c of categories" value="{{c.categoryName}}">{{c.categoryName}}</option> -->
+     <option *ngFor="let c of categories" value="{{c.categoryName}}">{{c.categoryName}}</option> 
     </select>
   </section>
   <div class="col-md-4 mx-auto alert alert-success" *ngIf="msg!=undefined">
     {{msg}}
   </div>
-  <table class="table table-primary table-stripped table-hover col-8 mx-auto m-2">
-    <tr>
-      <th>Medicine Id</th>
-      <th>Medicine Name</th>
-      <th>Medicine Cost</th>
-      <th>MFD</th>
-      <th>EXP</th>
-      <th>Stock</th>
-      <th>Category</th> 
-    </tr>
-    <tr *ngFor="let m of medicines">
-      <td>{{m.medicineId}}</td>
-      <td>{{m.medicineName | titlecase}}</td>
-      <td>{{m.medicineCost | currency:'INR'}}</td>
-      <td>{{m.mfd | date:'dd/MMM/yyyy'}}</td>
-      <td>{{m.expiryDate | date:'dd/MMM/yyyy'}}</td>
-      <td>{{m.stock}}</td>
-      <td>{{m.category.categoryName | titlecase}}</td>  
-    </tr>
-  </table>
+  <div style="display:flex; flex-wrap:wrap; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif" >
+    <div class="card border border-success rounded m-2" style="width: 18rem;background-color:#ccff99" *ngFor = "let m of medicines">
+      <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/610%2BxYveHmL._SL1000_.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{m.medicineName| titlecase}}</h5>
+          <p class="card-text">{{m.medicineCost| currency:"INR"}}</p>
+          <p class="card-text">{{m.mfd | date:'dd/MMM/yyyy'}}(Mfd)</p>
+          <p class="card-text">{{m.expiryDate | date:'dd/MMM/yyyy'}}(Exp)</p>
+          <p class="card-text">Category: {{m.category.categoryName | titlecase}}</p>
+          <input type="button" value = "Add to Cart" (click) = "addToCart(m.medicineId)" class = "btn btn-info p-2 m-2"/>
+          <input type="button" value = "specification" (click) = "med_specs(m.medicineId)" class = "btn btn-warning p-2"/>
+      </div>
+    </div>
+  </div>
 </article>
 
