Arghya ui commit 5

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,8 +1,8 @@
-<article class="row col-10 mx-auto" [ngStyle]="{height:'400px'}">
-  <section class="col-3 bg-info p-2 m-2 mx-auto">
+<article class=""  style="display:flex">
+  <section class="col-2 p-1 m-2 ">
     
-    <div><input type="button" class="btn btn-warning m-3 w-50" value="viewall" routerLink="/category/viewallcategory"/></div>
-    <div><input type="button" class="btn btn-warning m-3 w-50" value="addcategory" routerLink="/category/addcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 w-50" value="viewall" routerLink="/category/viewallcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 w-50" value="addcategory" routerLink="/category/addcategory"/></div>
   </section>
   <section class="col-6 p-2 m-2" >
     <h2> </h2>
