--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
     <a routerLink='medicine' class="navbar-brand btn btn-secondary text-white">Medicine</a>
     <a class="navbar-brand btn btn-secondary text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
     <a class="navbar-brand btn btn-secondary text-white" routerLink="medspecs">Medicine Specifications</a>
+    <a class="navbar-brand btn btn-secondary text-white" routerLink="profile">Profile</a>
   </nav>
   <router-outlet></router-outlet>
 </article>
