--- a/src/app/medicine/medicine.component.html
+++ b/src/app/medicine/medicine.component.html
@@ -1,11 +1,11 @@
 <article class=""  style="display:flex">
-  <section class="col-2 p-1 m-2 ">
+  <section class=" m-2 ">
     
-    <div><input type="button" class="btn btn-info m-3" value="medicinebyid" routerLink="/medicine/viewmedicinebyid/"/></div>
-    <div><input type="button" class="btn btn-info m-3" value="viewmedbycat" routerLink="/medicine/viewmedicinebycategory/"/></div>
-    <div><input type="button" class="btn btn-info m-3" value="addmedbycat" routerLink="/medicine/addmedbycat/"/></div>
+    <div><input type="button" class="btn btn-info m-2" value="medicinebyid" routerLink="/medicine/viewmedicinebyid/"/></div>
+    <div><input type="button" class="btn btn-info m-2" value="viewmedbycat" routerLink="/medicine/viewmedicinebycategory/"/></div>
+    <div><input type="button" class="btn btn-info m-2" value="addmedbycat" routerLink="/medicine/addmedbycat/"/></div>
   </section>
-  <section class="p-2 m-2" >
+  <section class="m-2" >
     
     <router-outlet></router-outlet>
   </section>
