--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,11 +1,11 @@
 <article class=""  style="display:flex">
-  <section class="col-2 p-1 m-2 ">
+  <section class="col-3 ">
     
-    <div><input type="button" class="btn btn-info m-3 w-50" value="viewall" routerLink="/category/viewallcategory"/></div>
-    <div><input type="button" class="btn btn-info m-3 w-50" value="addcategory" routerLink="/category/addcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 " value="viewall" routerLink="/category/viewallcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 " value="addcategory" routerLink="/category/addcategory"/></div>
   </section>
-  <section class="col-6 p-2 m-2" >
-    <h2> </h2>
+  <section class="col-4  m-1 mx-auto" >
+
     <router-outlet></router-outlet>
   </section>
 </article>
