--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,13 @@
 </header>
 
 <article>
-  <nav class="nav justify-content-center navbar navbar-expand-lg navbar-light bg-light">
-    
-    <a routerLink='category'class="navbar-brand btn btn-secondary text-white">Category </a>
-    <a routerLink='medicine' class="navbar-brand btn btn-secondary text-white">Medicine</a>
-    <a class="navbar-brand btn btn-secondary text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
-    <a class="navbar-brand btn btn-secondary text-white" routerLink="medspecs">Medicine Specifications</a>
-    <a class="navbar-brand btn btn-secondary text-white" routerLink="profile">Profile</a>
+  <nav class="nav justify-content-center navbar navbar-expand-lg navbar-dark bg-dark">
+    <a routerLink='category'class="navbar-brand text-white">Category</a>
+    <a routerLink='medicine' class="navbar-brand text-white">Medicine</a>
+    <a class="navbar-brand text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
+    <a class="navbar-brand text-white" routerLink="medspecs">Medicine Specifications</a>
+    <a class="navbar-brand text-white" routerLink="profile">Profile</a>
+    <a class="navbar-brand text-white" routerLink="removeorder">Cancel Order</a>
   </nav>
   <router-outlet></router-outlet>
 </article>
