--- a/src/app/viewmedspecbyid/viewmedspecbyid.component.html
+++ b/src/app/viewmedspecbyid/viewmedspecbyid.component.html
@@ -7,7 +7,7 @@
   <input type="button" class="btn btn-info text-white" (click)="searchById()" value="Search"/>
 </section>
 <br/>
-<section class="aler alert-danger col-4 mx-auto m-1 text-center" *ngIf="msg != undefined">{{msg}}</section>
+<section class="alert alert-danger col-4 mx-auto m-1 text-center" *ngIf="msg2 == 'error'">{{msg}}</section>
 <section class="col-sm-10 mx-auto m-1" *ngIf="medSpec != null">
   <table class="table table-primary table-striped table-hover col-md-8 mx-auto">
     <tr>
