Gaurav_UI_Commit_1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,9 @@
     
     <a routerLink='category'class="navbar-brand btn btn-secondary text-white">Category </a>
     <a routerLink='medicine' class="navbar-brand btn btn-secondary text-white">Medicine</a>
-    <a class="navbar-brand btn btn-secondary text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
+    <a class="navbar-brand btn btn-secondary text-white" routerLink="getcustomercart">Cart</a>
     <a class="navbar-brand btn btn-secondary text-white" routerLink="medspecs">Medicine Specifications</a>
+    <a class="navbar-brand btn btn-secondary text-white" routerLink="vieworder">Orders</a>
   </nav>
   <router-outlet></router-outlet>
 </article>
