Arghya Ui commit 7

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,11 +1,10 @@
-<article class=""  style="display:flex">
-  <section class="col-3 ">
+<article class="row col-11 mx-auto" [ngStyle]="{height:'450px'}" >
+  <section class="col-sm-11 col-md-3 col-lg-3 col-xl-3 p-1 m-1 text-center" style="background-color: #ccff99;" >
+    <div><input type="button" class="btn btn-info m-3 " value="View All Medicine" routerLink="/category/viewallcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 " value="Add Category" routerLink="/category/addcategory"/></div>
     
-    <div><input type="button" class="btn btn-info m-3 " value="viewall" routerLink="/category/viewallcategory"/></div>
-    <div><input type="button" class="btn btn-info m-3 " value="addcategory" routerLink="/category/addcategory"/></div>
   </section>
-  <section class="col-4  m-1 mx-auto" >
-
+  <section class="col-sm-11 col-md-8 col-lg-8 col-xl-8 p-2 m-2" > 
     <router-outlet></router-outlet>
   </section>
 </article>
