--- a/src/app/medicine/medicine.component.html
+++ b/src/app/medicine/medicine.component.html
@@ -1,12 +1,11 @@
-<article class=""  style="display:flex">
-  <section class=" m-2 ">
-    
-    <div><input type="button" class="btn btn-info m-2" value="medicinebyid" routerLink="/medicine/viewmedicinebyid/"/></div>
-    <div><input type="button" class="btn btn-info m-2" value="viewmedbycat" routerLink="/medicine/viewmedicinebycategory/"/></div>
-    <div><input type="button" class="btn btn-info m-2" value="addmedbycat" routerLink="/medicine/addmedbycat/"/></div>
+
+<article class="row col-11 mx-auto" [ngStyle]="{height:'450px'}">
+  <section class="col-sm-11 col-md-3 col-lg-3 col-xl-3 p-1 m-1 text-center" style="background-color: #ccff99;">
+    <div><input type="button" class="btn btn-info m-2" value="View Medicine by Id" routerLink="/medicine/viewmedicinebyid/"/></div>
+    <div><input type="button" class="btn btn-info m-2" value="View Medicine by  Category" routerLink="/medicine/viewmedicinebycategory/"/></div>
+    <div><input type="button" class="btn btn-info m-2" value="Add Medicine by Category" routerLink="/medicine/addmedbycat/"/></div>
   </section>
-  <section class="m-2" >
-    
+  <section class="col-sm-11 col-md-8 col-lg-8 col-xl-8 p-2 m-2" >
     <router-outlet></router-outlet>
   </section>
 </article>
