--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,6 @@
     <h2>Welcome to</h2>
     <h1>Online Ayurveda Medicine Store</h1>
     <a class="btn btn-lg btn-light m-2" routerLink="/medicine/viewmedicinebycategory">Discover Medicines</a>
-    <a class="btn btn-lg btn-primary m-2" routerLink="/login">Login</a>
+    <a class="btn btn-lg btn-primary m-2" routerLink="/getcustomercart">Cart</a>
   </div>
 </section>
