--- a/src/app/vieworder/vieworder.component.html
+++ b/src/app/vieworder/vieworder.component.html
@@ -1,10 +1,10 @@
-<article class="row col-10 mx-auto" [ngStyle]="{height:'400px'}">
-  <section class="col-3 p-1 m-1">
+<article class="row col-11 mx-auto" [ngStyle]="{height:'450px'}">
+  <section class="col-sm-11 col-md-3 col-lg-3 col-xl-3 p-1 m-1 text-center" style="background-color: #ccff99;">
     <div><input type="button" class="btn btn-info m-2" value="View Orders" routerLink="/vieworder/bycustid" /></div>
     <div><input type="button" class="btn btn-info m-2" value="viewbyorderid" routerLink="/vieworder/byorderid" /></div>
     <div><input type="button" class="btn btn-info m-2" value="viewallorders" routerLink="/vieworder/allorders" /></div>
   </section>
-  <section class="col-6 p-2 m-2">
+  <section class="col-sm-11 col-md-8 col-lg-8 col-xl-8 p-2 m-2" >
     <h2> Your Orders </h2>
     <router-outlet></router-outlet>
   </section>
