Arghya ui Commit 11

--- a/src/app/getcustomercart/getcustomercart.component.html
+++ b/src/app/getcustomercart/getcustomercart.component.html
@@ -24,7 +24,8 @@
       </div>
 
       <div style="position: absolute;
-      right: 150px;
+      right:150px;
+      top: 150px;
       width: 200px;
       height: 120px;">
         <div>
