--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="p-1" style="background-color: #ccff99;">
-  <h1 class="text-center text-primary mx-auto">Ayurveda Medicine Store</h1>
+  <h1 class="text-center text-primary mx-auto"><a routerLink = "">Ayurveda Medicine Store</a></h1>
   <div class="col-10 text-end" *ngIf="!storageservice.loginflag">
     <a routerLink="/login" style="cursor:pointer">Login</a>
   </div>
