--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,6 +1,6 @@
 <article class="row col-11 mx-auto" [ngStyle]="{height:'450px'}" >
   <section class="col-sm-11 col-md-3 col-lg-3 col-xl-3 p-1 m-1 text-center" style="background-color: #ccff99;" >
-    <div><input type="button" class="btn btn-info m-3 " value="View All Medicine" routerLink="/category/viewallcategory"/></div>
+    <div><input type="button" class="btn btn-info m-3 " value="View All Category" routerLink="/category/viewallcategory"/></div>
     <div><input type="button" class="btn btn-info m-3 " value="Add Category" routerLink="/category/addcategory"/></div>
     
   </section>
