--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
   <div class="homecontent">
     <h2>Welcome to</h2>
     <h1>Online Ayurveda Medicine Store</h1>
+    <h5><em style = "color:aliceblue">Inherited from the past, used for Mankind's Eternity</em></h5>
     <a class="btn btn-lg btn-light m-2" routerLink="/medicine/viewmedicinebycategory">Discover Medicines</a>
     <a class="btn btn-lg btn-primary m-2" routerLink="/getcustomercart">Cart</a>
   </div>
