--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 </header>
 
 <article>
-  <nav class="nav justify-content-center navbar navbar-expand-lg navbar-dark bg-dark" style="text-transform: uppercase;">
+  <nav class="nav justify-content-center navbar navbar-expand-lg navbar-dark bg-dark" style="text-transform: capitalize;font-family: Georgia;">
     <a routerLink='category'class="navbar-brand text-white">Category</a>
     <a routerLink='medicine' class="navbar-brand text-white">Medicine</a>
     <a class="navbar-brand text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
