--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,7 @@
     <a routerLink='medicine' class="navbar-brand text-white">Medicine</a>
     <a class="navbar-brand text-white" routerLink="getcustomercart" (click) = "setUserId()">Cart</a>
     <a class="navbar-brand text-white" routerLink="medspecs">Medicine Specifications</a>
-    <a class="navbar-brand text-white" routerLink="vieworder">Orders</a>
-    <a class="navbar-brand text-white" routerLink="removeorder">Cancel Order</a>
+    <a class="navbar-brand text-white" routerLink="order">Orders</a>
   </nav>
   <router-outlet></router-outlet>
 </article>
