--- a/src/app/viewbycustid/viewbycustid.component.html
+++ b/src/app/viewbycustid/viewbycustid.component.html
@@ -4,7 +4,7 @@
 </div>
 <section>
   <div *ngIf="msg!=undefined" class="alert alert-danger">{{msg}}</div>
-  <table class="table table-primary table-striped table-responsive{-sm|-md|-lg|-xl}" *ngIf="customers!=undefined">
+  <table class="table table-primary table-striped table-responsive{-sm|-md|-lg|-xl}"  *ngIf="customers!=undefined">
     <tr>
       <td>Customer Id</td>
       <td>{{customers[0].customer_order.customerId}}</td>
@@ -26,7 +26,7 @@
       <td>{{customers[0].customer_order.location}}</td>
     </tr>
   </table>
-<table class="table table-primary table-striped table-responsive{-sm|-md|-lg|-xl}" *ngIf="customers!=undefined">
+<table class="table table-primary table-striped table-responsive{-sm|-md|-lg|-xl}" style="position:relative;overflow:auto;display:block" *ngIf="customers!=undefined">
     <tr>
       <td>Order Id</td>
       <td *ngFor="let customer of customers">{{customer.orderId}}</td>
